# seq-cls-mean-pool

./: README.md  pyproject.toml
seq_cls_mean_pool/: __init__.py  modeling.py
